@@ -230,6 +230,9 @@
 	display: block;
 	width: 100%;
 }
+.htmlarea-custom-colors {
+	height: auto;
+}
 .htmlarea-custom-colors em {
 	display: block;
 	border: 1px solid;
